--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <div class="blog-review-card__content">
         <button>Learning</button>
         <p>Published 21 Dec 2023</p>
-        <h3>HTML & CSS foundations</h3>
+        <h2>HTML & CSS foundations</h2>
         <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
 
       <div class="blog-review-card__user">
         <img src="./assets/images/image-avatar.webp" alt="user-avatar">
-        <p>Greg Hooper</p>
+        <span>Greg Hooper</span>
       </div>
 
     </div>
